--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@shopify/flash-list": "1.7.6",
     "@supabase/supabase-js": "^2.49.4",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "53.0.12",
+    "expo": "53.0.13",
     "expo-application": "~6.1.4",
     "expo-blur": "~14.1.4",
-    "expo-camera": "~16.1.6",
+    "expo-camera": "~16.1.9",
     "expo-constants": "~17.1.6",
     "expo-document-picker": "~13.1.5",
     "expo-file-system": "~18.1.9",
@@ -26,8 +26,9 @@
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-location": "~18.1.4",
-    "expo-router": "~5.1.0",
+    "expo-router": "~5.1.1",
     "expo-secure-store": "~14.2.3",
+    "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
@@ -38,13 +39,15 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-star-rating-widget": "^1.9.2",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
-    "tailwindcss": "^3.4.17",
-    "expo-sharing": "~13.1.5"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
