--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-star-rating-widget": "^1.9.2",
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.17"
   },
